syntax = "proto3";
package matchproto;
option go_package = "./";
enum MSG_TYPE {
  NOTIFY = 0; //通知类型
  REQUEST = 1; //请求类型
  RESPONSE = 2; //答复类型
}

enum GAME_MSG_CODE {
    PLAYER_MATCHING_REQUEST=0;
    PLAYER_MATCHING_RESPONSE=1;
}

/* response的result枚举 */
enum RESULT_TYPE {
  SUCCESS = 0; //成功
  FAIL = 1; //失败
}


