syntax = "proto3";
package matchproto;
option go_package = ".;pb";
import "msgenum.proto";
import "struct.proto";

message Request {
  PlayerMatchingRequest playerMatchingRequest = 1;
}

message PlayerMatchingRequest {
  int32 playerId = 1; //玩家ID
}
